# voroL5

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
config/cmake_modules/: FindArmadillo.cmake
src/: CMakeLists.txt  errors.h  main.cpp  manager.cpp  manager.h  selftest_main.cpp  selftests.cpp
